# cherion

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SCHEMA.md  pyproject.toml  render.yaml
app/: __init__.py  main.py  pipeline.py  planner.py  schemas.py  spec_builder.py
app/agg/: __init__.py  aggregate.py  citations.py  extractors.py  geo.py  network.py
app/clinicaltrials/: __init__.py  client.py  facet_exec.py  facets.py  params.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  theme.ts  types.ts
frontend/src/components/: CitationPanel.tsx  EChart.tsx  FilterControls.tsx  GeoMap.tsx  QueryBar.tsx  RawSchema.tsx  ResultCard.tsx  VizRenderer.tsx
frontend/src/components/charts/: Bar.tsx  GroupedBar.tsx  Histogram.tsx  Network.tsx  Scatter.tsx  TimeSeries.tsx
tests/: conftest.py  test_aggregate.py  test_api.py  test_extractors.py  test_facets.py  test_geo.py  test_network.py  test_params.py  test_planner.py  test_spec_builder.py
tests/fixtures/: diabetes.json  pembrolizumab.json  stats_phase_status.json
